--- a/simple-nginx/Dockerfile
+++ b/simple-nginx/Dockerfile
@@ -1,3 +1,7 @@
 FROM nginx:alpine
-COPY src/ /usr/share/nginx/html
+
+WORKDIR /usr/share/nginx/html
+COPY src/ .
+# COPY src/ /usr/share/nginx/html
+
 EXPOSE 80
