--- a/visitor-counter/Dockerfile
+++ b/visitor-counter/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:24-alpine
-WORKDIR /usr/src/app
-COPY package*.json ./
+WORKDIR /app
+COPY package*.json .
 RUN npm ci
 COPY . .
+EXPOSE 8080
 CMD ["node", "index.js"]
